@@ -124,7 +124,8 @@ changes to your code:
 
 \begin{itemize}
 
-\item Everything is all in the details!
+\item dircache.listdir now passes exceptions to the caller, 
+instead of returning empty lists.
 
 \end{itemize}
 
